force-app/main/default/objects/Case/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <inlineHelpText>問合せ者の企業名を入力してください。
（取引先・取引先責任者に情報がない場合）</inlineHelpText>
    <label>企業名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>