force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>問合せ者のメールアドレスです</inlineHelpText>
    <label>問合せ者メールアドレス</label>
    <type>Email</type>
</CustomField>