force-app/main/default/objects/Case/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <description>問合せの担当者名の記入欄です。</description>
    <label>担当者</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>読者SC大久保</fullName>
            </value>
            <value>
                <fullName>読者SC森野</fullName>
            </value>
            <value>
                <fullName>読者SC秋本</fullName>
            </value>
            <value>
                <fullName>読者SC須田</fullName>
            </value>
            <value>
                <fullName>読者SC斎藤</fullName>
            </value>
            <value>
                <fullName>読者SC佐々木</fullName>
            </value>
            <value>
                <fullName>TK野坂</fullName>
            </value>
            <value>
                <fullName>TK澤</fullName>
            </value>
            <value>
                <fullName>TK太田</fullName>
            </value>
            <value>
                <fullName>TKその他</fullName>
            </value>
            <value>
                <fullName>DNP担当者A(仮)</fullName>
            </value>
            <value>
                <fullName>DNP担当者B(仮)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>