force-app/main/default/objects/Case/fields/InqSummary__c.field-meta.xml
<CustomField>
    <fullName>InqSummary__c</fullName>
    <description>問合せ内容の概要のメモ欄です。種別詳細を捕捉する用途で記載ください。</description>
    <inlineHelpText>問合せ内容の概要のメモ欄です。種別詳細を捕捉する用途で記載ください。</inlineHelpText>
    <label>問合せ概要</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>