force-app/main/default/objects/Case/fields/InquiryCounts__c.field-meta.xml
<CustomField>
    <fullName>InquiryCounts__c</fullName>
    <defaultValue>1</defaultValue>
    <description>同様の問合せが発生した場合、件数を入力してください（通常は1です）</description>
    <inlineHelpText>同様の問合せが発生した場合、件数を入力してください（通常は1です）</inlineHelpText>
    <label>同様の問合せ件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>