force-app/main/default/objects/Case/fields/InquiryDate__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>問い合わせの発生した日時を入力してください。</description>
    <label>問い合わせ日時</label>
    <type>DateTime</type>
</CustomField>