force-app/main/default/objects/Case/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>問合せ者の氏名を入力してください。
(取引先・取引先責任者に情報が無い場合)</inlineHelpText>
    <label>問合せ者 氏名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>