force-app/main/default/objects/Case/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <inlineHelpText>問合せ者の電話番号を入力してください。
（取引先・取引先責任者に情報が無い場合）</inlineHelpText>
    <label>問合せ者 電話番号</label>
    <type>Phone</type>
</CustomField>