force-app/main/default/objects/Case/fields/TypeDetail__c.field-meta.xml
<CustomField>
    <fullName>TypeDetail__c</fullName>
    <description>問合せ内容を対応者が分類する項目</description>
    <inlineHelpText>問合せ内容を対応者がさらに分類するために選択してください。</inlineHelpText>
    <label>種別詳細</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>定期購読-注文</fullName>
            </value>
            <value>
                <fullName>定期購読-質問</fullName>
            </value>
            <value>
                <fullName>定期購読-住所変更</fullName>
            </value>
            <value>
                <fullName>定期購読-解約</fullName>
            </value>
            <value>
                <fullName>定期購読-契約内容確認</fullName>
            </value>
            <value>
                <fullName>定期購読-継続拒否</fullName>
            </value>
            <value>
                <fullName>配送関連</fullName>
            </value>
            <value>
                <fullName>入金関連（見積もり、納品、請求書等）</fullName>
            </value>
            <value>
                <fullName>発売日</fullName>
            </value>
            <value>
                <fullName>購入方法</fullName>
            </value>
            <value>
                <fullName>操作方法</fullName>
            </value>
            <value>
                <fullName>記事／内容</fullName>
            </value>
            <value>
                <fullName>書影の提供希望</fullName>
            </value>
            <value>
                <fullName>見本誌請求</fullName>
            </value>
            <value>
                <fullName>クレーム</fullName>
            </value>
            <value>
                <fullName>ご意見</fullName>
            </value>
            <value>
                <fullName>単品購入</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>