force-app/main/default/objects/Case/recordTypes/dnp_callcenter.recordType-meta.xml
<RecordType>
    <fullName>dnp_callcenter</fullName>
    <active>true</active>
    <businessProcess>Test</businessProcess>
    <description>DNPコールセンター向けレコードタイプ</description>
    <label>DNPコールセンター</label>
</RecordType>