force-app/main/default/objects/Case/recordTypes/sc_tel.recordType-meta.xml
<RecordType>
    <fullName>sc_tel</fullName>
    <active>true</active>
    <businessProcess>Test</businessProcess>
    <description>読者SC用プロファイル</description>
    <label>読者SC(電話)</label>
</RecordType>