force-app/main/default/objects/Case/listViews/CustomerInquiry_Case.listView-meta.xml
<ListView>
    <fullName>CustomerInquiry_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>カスタマ問合せ</label>
    <queue>CustomerInquiry</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>