force-app/main/default/objects/Case/listViews/SC.listView-meta.xml
<ListView>
    <fullName>SC</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>InquiryDate__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>TypeDetail__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>InqSummary__c</columns>
    <columns>Field1__c</columns>
    <columns>RequiredTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>contains</operation>
        <value>佐藤</value>
    </filters>
    <label>読者SCコールセンター用</label>
</ListView>